fix: 解决lintain检查错误
描述信息中提供的内容无法让lintain编译通过，沿用主线的描述

Log: 解决Lintain检测错误
Change-Id: I24e144a5f14a3f4b2dd3eb1a40f8d0d7fafb8bda

--- a/debian/control
+++ b/debian/control
@@ -16,5 +16,5 @@ Architecture: all
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          golang-dlib-dev
-Description: The project is a packaging dependency
- mirrored from https://cr.deepin.io/#/admin/projects/go-dbus-factory
+Description: mirrored from https://cr.deepin.io/#/admin/projects/go-dbus-factory
+ Convenient go binding code for automatically generating DBus services
