--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Build-Depends:
  dh-golang,
  golang-any,
  golang-dlib-dev,
+ golang-golang-x-tools,
 Standards-Version: 4.5.1
 Homepage: https://github.com/linuxdeepin/go-dbus-factory
 XS-Go-Import-Path: github.com/linuxdeepin/go-dbus-factory
