feat: add option to custom InterfaceName
BREAKING CHANGE: SetInterfaceName 改名 SetInterfaceName_

Log: 添加自定义 InterfaceName 的配置
Influence: 域管账户登录
Change-Id: If98777b3568cfba94f492dffba2334683ced8cf2

--- a/com.deepin.daemon.authenticate.fingerprint/config.json
+++ b/com.deepin.daemon.authenticate.fingerprint/config.json
@@ -7,7 +7,7 @@
       "Interfaces": [
         {
           "Name": "com.deepin.daemon.Authenticate.Fingerprint.Device",
-          "NoGetInterfaceName": true,
+          "CustomInterfaceName": true,
           "Type": "device",
           "Accessor": "Device"
         }
@@ -19,7 +19,7 @@
       "Interfaces": [
         {
           "Name": "com.deepin.daemon.Authenticate.Fingerprint.CommonDevice",
-          "NoGetInterfaceName": true,
+          "CustomInterfaceName": true,
           "Type": "commonDevice",
           "Accessor": "CommonDevice"
         }
