--- a/com.deepin.daemon.authenticate.ukey/config.json
+++ b/com.deepin.daemon.authenticate.ukey/config.json
@@ -7,7 +7,7 @@
       "Interfaces": [
         {
           "Name": "com.deepin.daemon.Authenticate.UKey.Device",
-          "NoGetInterfaceName": true,
+          "CustomInterfaceName": true,
           "Type": "ukey",
           "Accessor": "UKey"
         }
