fix(debian): 依赖缺失
没有写单元测试的项目打包失败，
-dev 包增加依赖 golang-github-stretchr-testify-dev

Log: 修复打包失败
Change-Id: I4a345d4e0d10e31143ba294cc410356c76a9f191

--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Package: golang-github-linuxdeepin-go-dbus-factory-dev
 Architecture: all
 Depends:
  golang-dlib-dev,
+ golang-github-stretchr-testify-dev,
  ${misc:Depends},
  ${shlibs:Depends},
 Description: mirrored from https://cr.deepin.io/#/admin/projects/go-dbus-factory
