feat: add dbus method with timeout
add dbus method with timeout

Log: add dbus method with timeout
Change-Id: I9939e2bad1a339d9a8ed979af887f139143e6027

--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,8 @@ Maintainer: Deepin Packages Builder <packages@deepin.com>
 Build-Depends: debhelper,
                dh-golang,
                golang-any,
-               golang-dlib-dev
+               golang-dlib-dev,
+               golang-golang-x-tools,
 Standards-Version: 4.0.0
 Homepage: https://github.com/linuxdeepin/go-dbus-factory
 XS-Go-Import-Path: github.com/linuxdeepin/go-dbus-factory
