--- a/com.deepin.udcp.iam/config.json
+++ b/com.deepin.udcp.iam/config.json
@@ -1,12 +1,13 @@
 {
-  "Service": "com.deepin.udcp.iam",
+  "Service": "",
   "Objects": [
     {
       "Type": "UdcpCache",
-      "Path": "/com/deepin/udcp/iam",
+      "Path": "",
       "Interfaces": [
         {
           "Name": "com.deepin.udcp.iam",
+          "CustomInterfaceName": true,
           "Type": "udcpCache"
         }
       ]
