fix(display): 导出Touchscreens属性
导出Touchscreens属性，提供给dde-daemon使用

Log: 导出Touchscreens属性
Change-Id: Idbe27f9be13125c0ce35d8437d8fcabd23c53bee

--- a/com.deepin.daemon.display/config.json
+++ b/com.deepin.daemon.display/config.json
@@ -27,6 +27,10 @@
             "p/TouchMap": {
               "Type": "PropDisplayTouchMap",
               "ValueType": "map[string]string"
+            },
+            "p/Touchscreens":{
+              "Type": "PropTouchscreens",
+              "ValueType": "[]Touchscreen"
             }
           }
         }
