fix: 接口参数和格式错误
NewUdcpCache 接口参数修改

Log: 修改域管平台适配相关接口
Influence: 域管用户功能
Task: https://pms.uniontech.com/zentao/task-view-78519.html
Change-Id: I902f55540e6230adec795e6609eb96ffb8d3eaa4

--- a/com.deepin.udcp.iam/config.json
+++ b/com.deepin.udcp.iam/config.json
@@ -1,9 +1,9 @@
 {
-  "Service": "com.deepin.udcp.iam",
+  "Service": "",
   "Objects": [
     {
       "Type": "UdcpCache",
-      "Path": "/com/deepin/udcp/iam",
+      "Path": "",
       "Interfaces": [
         {
           "Name": "com.deepin.udcp.iam",
