feat: 添加人脸识别相关接口
添加人脸识别相关接口

Log: 添加人脸识别相关接口
Task: https://pms.uniontech.com/zentao/task-view-82678.html
Change-Id: Ia190e33e8e7d3327b91d0bfacd58c7001ed26961

--- a/com.deepin.daemon.authenticate/config.json
+++ b/com.deepin.daemon.authenticate/config.json
@@ -33,6 +33,17 @@
           "Accessor": "UKey"
         }
       ]
+    },
+    {
+      "Type": "Face",
+      "Path": "/com/deepin/daemon/Authenticate/Face",
+      "Interfaces": [
+        {
+          "Name": "com.deepin.daemon.Authenticate.Face",
+          "Type": "face",
+          "Accessor": "Face"
+        }
+      ]
     }
   ]
 }
