feat: 低分辨率铺满方式设置
根据FillModeInfo结构体属性set回调，startdde通过xrandr设置低分辨率下的铺满方式

Log: 添加低分辨率铺满方式设置功能
Task: https://pms.uniontech.com/zentao/task-view-82405.html
Change-Id: I1c2c0c57da183421b7668a400d8ba1363cf63091

--- a/com.deepin.daemon.display/config.json
+++ b/com.deepin.daemon.display/config.json
@@ -49,6 +49,9 @@
             "p/CurrentMode": {
               "RefType": "PropModeInfo"
             },
+            "p/CurrentFillMode": {
+              "RefType": "PropCurrentFillMode"
+            },
             "p/Modes": {
               "RefType": "PropModeInfoSlice"
             },
@@ -69,6 +72,11 @@
     {
       "Type": "PropModeInfoSlice",
       "ValueType": "[]ModeInfo"
+    },
+    {
+      "Type": "PropCurrentFillMode",
+      "ValueType": "FillModeInfo",
+      "EmptyValue": "$T{}"
     }
   ]
 }
