feat: 增加 GetReminderInfo 接口
更新 com.deepin.daemon.accounts 的结构

Log:
Task: https://pms.uniontech.com/zentao/task-view-83798.html
Change-Id: I886fd699deb9aa949bc83eafead4828d47e57e4f

--- a/com.deepin.daemon.accounts/config.json
+++ b/com.deepin.daemon.accounts/config.json
@@ -16,7 +16,15 @@
       "Interfaces": [
         {
           "Name": "com.deepin.daemon.Accounts.User",
-          "Type": "user"
+          "Type": "user",
+          "Fixes": {
+            "m/GetReminderInfo": [
+              {
+                "Name": "info",
+                "Type": "LoginReminderInfo"
+              }
+            ]
+          }
         }
       ]
     },
