feat: 添加厂商生物认证认证接口(人脸,虹膜)
 添加人脸,虹膜厂商接口

Log: 添加人脸,虹膜厂商接口
Task: https://pms.uniontech.com/zentao/task-view-90185.html
Influence: 人脸,虹膜的管理与认证认证
Change-Id: I6ad9574ceaa1fc15f9c688b26b6f25c26881fdfd

--- a/com.deepin.daemon.authenticate/config.json
+++ b/com.deepin.daemon.authenticate/config.json
@@ -44,6 +44,17 @@
           "Accessor": "Face"
         }
       ]
+    },
+    {
+      "Type": "CharaManger",
+      "Path": "/com/deepin/daemon/Authenticate/CharaManger",
+      "Interfaces": [
+        {
+          "Name": "com.deepin.daemon.Authenticate.CharaManger",
+          "Type": "charaManger",
+          "Accessor": "CharaManger"
+        }
+      ]
     }
   ]
 }
