--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Build-Depends:
  dh-golang,
  golang-any,
  golang-dlib-dev,
+ golang-dbus-dev,
  golang-github-stretchr-testify-dev,
  golang-golang-x-tools,
 Standards-Version: 4.5.1
