feat: 更新 org.kde.kwin 接口
增加 /Kwin Object Path

Log:
Bug: https://pms.uniontech.com/zentao/bug-view-100437.html
Influence: 无
Change-Id: I195a25978573adb0cadc62d72982141d00ae837b

--- a/org.kde.kwin/config.json
+++ b/org.kde.kwin/config.json
@@ -2,6 +2,16 @@
   "Service": "org.kde.KWin",
   "Objects": [
     {
+      "Type": "KWin",
+      "Path": "/KWin",
+      "Interfaces": [
+        {
+          "Name": "org.kde.KWin",
+          "Type": "kwin"
+        }
+      ]
+    },
+    {
       "Type": "Compositor",
       "Path": "/Compositor",
       "Interfaces": [
