--- a/archlinux/PKGBUILD
+++ b/archlinux/PKGBUILD
@@ -26,6 +26,7 @@ prepare() {
   go get -v github.com/godbus/dbus/introspect
   go get -v github.com/godbus/dbus/prop
   go get -v gopkg.in/yaml.v3
+  go get -v github.com/stretchr/testify
 }
 
 build() {
