feat: 新增dmi相关信息的导出
新增dmi相关信息的导出

Log: 新增dmi相关信息的导出
Task: https://pms.uniontech.com/task-view-220857.html
Influence: 无功能影响
Change-Id: I6113ac8bcb8ef4e60d23a67e02109912d6d959f8

--- a/com.deepin.system.systeminfo/config.json
+++ b/com.deepin.system.systeminfo/config.json
@@ -7,9 +7,20 @@
       "Interfaces": [
         {
           "Name": "com.deepin.system.SystemInfo",
-          "Type": "systemInfo"
+          "Type": "systemInfo",
+          "Fixes": {
+            "p/DMIInfo": {
+              "RefType": "PropDMIInfo"
+            }
+          }
         }
       ]
+    }
+  ],
+  "PropertyTypes": [
+    {
+      "Type": "PropDMIInfo",
+      "ValueType": "DMIInfo"
     }
   ]
 }
