feat: add bluetooth battery interface
add bluetooth battery inferface for org.bluez

--- a/system/org.bluez/config.json
+++ b/system/org.bluez/config.json
@@ -61,6 +61,11 @@
       "Type": "Device",
       "Interfaces": [
         {
+          "Name": "org.bluez.Battery1",
+          "Type": "battery",
+          "Accessor": "Battery"
+        },
+        {
           "Name": "org.bluez.Device1",
           "Type": "device",
           "Accessor": "Device",
