chore: 后端接口整改
dde后端接口使用org.deepin.dde，去掉多余的接口

--- a/session/org.deepin.dde.display1/config.json
+++ b/session/org.deepin.dde.display1/config.json
@@ -31,6 +31,10 @@
             "p/Touchscreens":{
               "Type": "PropTouchscreens",
               "ValueType": "[]Touchscreen"
+            },
+            "p/TouchscreensV2":{
+              "Type": "PropTouchscreensV2",
+              "ValueType": "[]TouchscreenV2"
             }
           }
         }
