--- a/system/org.deepin.dde.inputdevices1/config.json
+++ b/system/org.deepin.dde.inputdevices1/config.json
@@ -19,6 +19,15 @@
           "Type": "touchscreen"
         }
       ]
+    },
+    {
+      "Type": "Touchpad",
+      "Interfaces": [
+        {
+          "Name": "org.deepin.dde.InputDevices1.Touchpad",
+          "Type": "touchpad"
+        }
+      ]
     }
   ]
 }
