--- a/session/org.kde.kwin/config.json
+++ b/session/org.kde.kwin/config.json
@@ -2,6 +2,16 @@
   "Service": "org.kde.KWin",
   "Objects": [
     {
+      "Type": "KWin",
+      "Path": "/KWin",
+      "Interfaces": [
+        {
+          "Name": "org.kde.KWin",
+          "Type": "kwin"
+        }
+      ]
+    },
+    {
       "Type": "Compositor",
       "Path": "/Compositor",
       "Interfaces": [
