chore: rename com.deepin.lastore.Agent to org.deepin.dde.Lastore1.Agent
add ReportLog

Task: https://pms.uniontech.com/task-view-362299.html

--- a/session/org.deepin.dde.lastore1.agent/config.json
+++ b/session/org.deepin.dde.lastore1.agent/config.json
@@ -6,7 +6,7 @@
       "Path": "",
       "Interfaces": [
         {
-          "Name": "com.deepin.lastore.Agent",
+          "Name": "org.deepin.dde.Lastore1.Agent",
           "Type": "agent"
         }
       ]
