feat: 更新指纹接口，支持指纹热插拔
 更新指纹接口，支持指纹热插拔

 Log:  更新指纹接口
 PMS: BUG-323885

--- a/system/net.reactivated.fprint/config.json
+++ b/system/net.reactivated.fprint/config.json
@@ -2,6 +2,16 @@
   "Service": "net.reactivated.Fprint",
   "Objects": [
     {
+      "Type": "ObjectManager",
+      "XMLFile": "-",
+      "Path": "/net/reactivated/Fprint",
+      "Interfaces": [
+        {
+          "Name": "org.freedesktop.DBus.ObjectManager"
+        }
+      ]
+    },
+    {
       "Type": "Manager",
       "Path": "/net/reactivated/Fprint/Manager",
       "Interfaces": [
